@@ -1,4 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
-EXTRA_DIST = cme_find_socketpair.m4 rjb_find_gethostent.m4
+EXTRA_DIST = cme_find_socketpair.m4 rjb_find_gethostent.m4 rjb_find_stlport.m4
 
